# c-software-template

./: CMakeLists.txt  README.md
test/: CMakeLists.txt  example_compilation_unit_tests.c
tests/: example_compilation_unit_tests.c
